@@ -35,6 +35,7 @@ fastimport = fastimport
 https = urllib3>=1.24.1
 pgp = gpg
 paramiko = paramiko
+aiohttp = aiohttp
 
 [options.entry_points]
 console_scripts =
