@@ -1,5 +1,8 @@
 0.20.47	UNRELEASED
 
+ * Add basic ``dulwich.aiohttp`` module that provides
+   server support. (Jelmer Vernooĳ)
+
  * Fix Repo.reset_index.
    Previously, it instead took the union with the given tree.
    (Christian Sattler, #1072)
